--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,8 @@ apply plugin: 'maven'
 apply plugin: 'osgi'
 
 dependencies {
-	compile 'org.reactivestreams:reactive-streams:1.0.0'
-	compile 'io.projectreactor:reactive-streams-commons:0.4.0.BUILD-SNAPSHOT'
+	//compile 'org.reactivestreams:reactive-streams:1.0.0'
+	compile 'io.reactivex.rxjava2:rxjava:2.0.0'
 	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
